Align the contact form correctly

--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -7,7 +7,7 @@
 
 .contact-input {
   display: block;
-  width: calc(100% - 0.5em);
+  width: 100%;
   margin: 1em 0;
   border: 2px solid black;
   padding: 0.5em 0 0.5em 0.5em;
